--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,7 @@ dependencies:
 dev_dependencies:
   build_runner: ^1.4.0
   build_web_compilers: ^2.0.0
-  test: any
+  test: ^1.6.5
 
 dependency_overrides:
   flutter_web:
